--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     ],
   "autoload": {
     "psr-4": {
-      "App\\": "src"
+      "App\\": "src/"
     }
   },
-    "minimum-stability": "dev",
-    "require": {}
+    "minimum-stability": "stable",
+    "require": {
+        "symfony/routing": "^4.3"
+    }
 }
