--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
   },
     "minimum-stability": "stable",
     "require": {
-        "symfony/routing": "^4.3"
+        "symfony/routing": "^4.3",
+        "symfony/http-foundation": "^4.3",
+        "symfony/config": "^4.3",
+        "symfony/yaml": "^4.3"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^4.3"
     }
 }
