--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/routing": "^4.3",
         "symfony/http-foundation": "^4.3",
         "symfony/config": "^4.3",
-        "symfony/yaml": "^4.3"
+        "symfony/yaml": "^4.3",
+        "twig/twig": "^2.11"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.3"
