Added function renderResponse

--- a/config/app/routes.yaml
+++ b/config/app/routes.yaml
@@ -39,3 +39,8 @@ resumes:
   methods: [GET,POST]
   requirements:
     id: '\d+'
+
+connection:
+  path: /connection/
+  controller: DefaultController::connection
+  methods: [GET,POST]
