--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "symfony/http-foundation": "^4.3",
         "symfony/config": "^4.3",
         "symfony/yaml": "^4.3",
-        "twig/twig": "^2.11"
+        "twig/twig": "^2.11",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.3"
