--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/config": "^4.3",
         "symfony/yaml": "^4.3",
         "twig/twig": "^2.11",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "phpunit/phpunit": "^8.3"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.3"
