--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,12 @@
 {
     "name": "admin/obt_p5_php",
-    "description": "final dev P5",
-    "license": "MIT",
     "authors": [
         {
             "name": "obt-development",
             "email": "olivier.boutet@obt-development.eu"
         }
     ],
-  "autoload": {
-    "psr-4": {
-      "App\\": "src"
-    }
-  },
-    "minimum-stability": "stable",
     "require": {
-        "symfony/routing": "^4.3",
-        "symfony/http-foundation": "^4.3",
-        "symfony/config": "^4.3",
-        "symfony/yaml": "^4.3",
-        "twig/twig": "^2.11",
-        "ext-pdo": "*",
-        "phpunit/phpunit": "^8.3"
-    },
-    "require-dev": {
-        "symfony/var-dumper": "^4.3"
+        "swiftmailer/swiftmailer": "^6.2"
     }
 }
